add output of a csv so we can label more

--- a/create-vent-query-process/1b-merge_prev_label_with_new_label.ipynb
+++ b/create-vent-query-process/1b-merge_prev_label_with_new_label.ipynb
@@ -43,6 +43,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# output the merged to a file incase we want to add new labels\n",
+    "df.sort_values('n_pat', ascending=False).to_csv('respiratorycharting_add_more_labels.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
