distribution of vent days

--- a/ventduration/ventilation-durations.ipynb
+++ b/ventduration/ventilation-durations.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -50,12 +50,13 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import psycopg2\n",
-    "import getpass"
+    "import getpass\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,8 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('./ventilation-durations.sql', 'r') as f:\n",
@@ -102,8 +105,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "query = \\\n",
@@ -117,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,13 +207,46 @@
        "4            1433812        1          290       2202              1912"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.text.Text at 0x114be5518>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAnEAAAFUCAYAAABLBGogAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xm4JVV97vHvC4hM4sSkQBg1xikCjWJMAMVco6iRCxiD\nRNtoNIDiFKXVa24GDQ1BDZHBGC9pEyExorYhGK+IgIBIaDAOEG4YbCAdIAgKNqCt8rt/VG3ZbvY5\nvffpM9U538/z7KdOVa1VtXb1gvOeVVOqCkmSJHXLRnPdAEmSJI3PECdJktRBhjhJkqQOMsRJkiR1\nkCFOkiSpgwxxkiRJHWSIkyRJ6iBDnCRJUgcZ4iRJkjpok7luwEzbZpttatddd53rZkiSJK3XlVde\n+d2q2naUsgs+xO26666sWrVqrpshSZK0XkluGrWsp1MlSZI6yBAnSZLUQYY4SZKkDjLESZIkdZAh\nTpIkqYMMcZIkSR1kiJMkSeogQ5wkSVIHGeIkSZI6yBAnSZLUQYY4SZKkDlrw706dLbsuO3es8quX\nHzxDLZEkSYuBI3GSJEkdZIiTJEnqIEOcJElSBxniJEmSOsgQJ0mS1EGGOEmSpA4aO8Ql2TzJO5Nc\nkeT7Se5L8p0kn0rynCHlN0pyTJJVSdYmuTvJxUl+e4R9HdGWvbutu6rdluFTkiQtamM9Jy7JbsAX\ngT2BW4ELgJ8AuwAvA74BXNpXfmPgM8BLgXvaug8HDgLOSrJfVb15gn2dChwN/BA4H/hxW+8U4KAk\nh1XVA+O0X5IkaaEYOcQl2RI4D9gdWAacVFU/7Vv/WOCxA9XeQhPgrgGeV1W3t2WfAFwMHJvky1X1\nuYF9HUoT4G4D9q+q69rl29MEx0OANwEnj/5VJUmSFo5xTkv+L2AP4NSqOqE/wAFU1Z1V9R+9+XYU\n7p3t7FG9ANeWvQ44rp19z5B9vaudHtcLcG2924Gj2tllnlaVJEmL1UghKMmmwO+1sx8ccdvPBrYD\n/rOqvjJk/adoTpHum2THvn3tBOwDrGvL/JyqughYA+wA7DdiWyRJkhaUUU+n7kNzqnRNVX0nyd40\npzS3A24HvlhVlwzU2audXjFsg1V1X5KrgWe0nzUD9a6uqvsnaM8VwI5t2a+O+B0kSZIWjFFD3NPa\n6ZokJwFvH1j/3iQrgSOr6t522W7t9KZJtnszTYDbrW/ZqPX6y0qSJC0qo15T9ph2uhdNgPsLmjtU\nHw38Js0o2suA0/rqbNVO72Via9vpI6ah3s8keX37OJJVd9xxxySbkSRJ6qZRQ1yv3MOAT1TVW6vq\nhqr6flX9E02AK+B3kuwxEw0dR1V9tKqWVNWSbbfddq6bI0mSNO1GDXE/6Pv5rwdXVtUq4EogwAHt\n4t5o2ZaTbLc36ta//anWkyRJWjRGDXHfmeDnYWV2aKer2+kuk2x354GyG1JPkiRp0Rg1xH297+fB\nB/r2bNNOeyNpV7XTfYcVTrIF8NQh2+/9/JQkm0+wr30HykqSJC0qI4W4qloDXN7OHjS4Psmjgb3b\n2VXt9DLgDmCnJPsP2ezhNNfYXdFuv7evW2gC4KZtmcF9HQDsRPM2h8tGab8kSdJCM84bD97fTt+d\nZElvYZLNgNOBR9JcF3cZQPtGhxPbYqcn2a6vzhOA5QPb7Xd8Oz0hyZ599bbjwTtgl/vuVEmStFiN\n/O7UqjonyQdoHjHy1SRfA+4Engk8nuYxI79dVdVX7UPA/sBLgOuSnE8z+vZ8YDPgw4PvTW33dXaS\n02lesfWtJF+iebvDQcDWwErglHG/rCRJ0kIx1rtHq+oPgEOBS2geAPwi4D6aV3Ht1f+e07b8T2ke\nP/Im4HrgBTR3r14JvLKqjp1kX0cDr6Q5tXpAW/d64I3AoYPvbpUkSVpMRh6J66mqzwCfGaP8AzSj\nZmOPnFXVWcBZ49aTJEla6MYaiZMkSdL8YIiTJEnqIEOcJElSBxniJEmSOsgQJ0mS1EGGOEmSpA4y\nxEmSJHWQIU6SJKmDDHGSJEkdZIiTJEnqIEOcJElSBxniJEmSOsgQJ0mS1EGGOEmSpA4yxEmSJHWQ\nIU6SJKmDDHGSJEkdZIiTJEnqIEOcJElSBxniJEmSOsgQJ0mS1EGGOEmSpA4yxEmSJHWQIU6SJKmD\nDHGSJEkdZIiTJEnqIEOcJElSBxniJEmSOsgQJ0mS1EGGOEmSpA4yxEmSJHWQIU6SJKmDDHGSJEkd\nZIiTJEnqIEOcJElSBxniJEmSOsgQJ0mS1EGGOEmSpA4yxEmSJHWQIU6SJKmDDHGSJEkdZIiTJEnq\nIEOcJElSBxniJEmSOsgQJ0mS1EGGOEmSpA4yxEmSJHWQIU6SJKmDDHGSJEkdZIiTJEnqIEOcJElS\nBxniJEmSOsgQJ0mS1EGGOEmSpA4yxEmSJHWQIU6SJKmDDHGSJEkdZIiTJEnqIEOcJElSBxniJEmS\nOsgQJ0mS1EGGOEmSpA4yxEmSJHWQIU6SJKmDphzikvxZkmo/fzBJuSOSXJzk7iRrk6xKckySSfed\n5DeSfDHJXUnuS/LtJO9J8vCptlmSJGmhmFKIS7Iv8E6g1lPuVOBMYAlwMXAe8ETgFODsiYJckncC\n/wI8D7gKOBfYDngfcGGSLabSbkmSpIVi7BDXjoR9HLgd+Nwk5Q4FjgZuA55eVS+uqkOAJwD/DhwC\nvGlIvSXAcuA+4DlV9fyqOhzYHfgKsB/w/nHbLUmStJBMZSTuT4BfAn4fuHuScu9qp8dV1XW9hVV1\nO3BUO7tsyGjcMiDACVV1eV+9tcBrgAeAo5M8agptlyRJWhDGCnFJngW8HTirqs6ZpNxOwD7AOuBT\ng+ur6iJgDbADzchar96mwAvb2TOH1LsRuAzYFHjROG2XJElaSEYOcUk2ozmNehfw5vUU36udXl1V\n909Q5oqBsgC/CGwB3FVVN4xRT5IkaVHZZIyy76cJWa+oqu+up+xu7fSmScrcPFC2/+ebmdiwepIk\nSYvKSCNxSX4FeAuwsqo+OUKVrdrpvZOUWdtOHzEN9X5Okte3jzJZdccdd0zaUEmSpC5ab4hLsjmw\nAriH5m7Tea+qPlpVS6pqybbbbjvXzZEkSZp2o5xO/TOax4L8blXdOuJ2e6NlW05Spjfq9oNpqCdJ\nkrSojBLiDqF5rMerk7x6YN2T2ulRSV4MXF9VrwNWt8t3mWS7O7fT1X3Lej//wpj1JEmSFpVRb2zY\nCDhgkvW7t5/es9u+3k6fkmTzCe5Q3XegLMC1wP3AY5LsMcEdqs8cUk+SJGlRWe81cVW1a1Vl2Ifm\nkSMA72iXPaOtcwvN67I2BQ4f3GaSA4CdaN7mcFnfvtbRvG4L4JVD6u0OPJvm+XPnjvE9JUmSFpQp\nvTt1RMe30xOS7NlbmGQ74LR2dnlVPTBQbznNO1mPS/LMvnpbAWfQtPm0qvr+jLVckiRpnpuxEFdV\nZwOn07yV4VtJzknyGeA64MnASuCUIfWuoHn11hbAV5N8Mck/AjfQnNK9HHjPTLVbkiSpC8Z52O/Y\nquroJJcAx9AEsI1prns7Azh9yChcr96JSb5J84qvfYHNgBuBvwROqqofzWS7JUmS5rsNCnFVtRRY\nup4yZwFnTWHbXwC+MKWGSZIkLXAzeU2cJEmSZoghTpIkqYMMcZIkSR1kiJMkSeogQ5wkSVIHGeIk\nSZI6yBAnSZLUQYY4SZKkDjLESZIkdZAhTpIkqYMMcZIkSR1kiJMkSeogQ5wkSVIHGeIkSZI6yBAn\nSZLUQYY4SZKkDjLESZIkdZAhTpIkqYMMcZIkSR1kiJMkSeogQ5wkSVIHGeIkSZI6yBAnSZLUQYY4\nSZKkDjLESZIkdZAhTpIkqYMMcZIkSR1kiJMkSeogQ5wkSVIHGeIkSZI6yBAnSZLUQYY4SZKkDjLE\nSZIkdZAhTpIkqYMMcZIkSR1kiJMkSeogQ5wkSVIHGeIkSZI6yBAnSZLUQYY4SZKkDjLESZIkdZAh\nTpIkqYMMcZIkSR1kiJMkSeogQ5wkSVIHGeIkSZI6yBAnSZLUQYY4SZKkDjLESZIkdZAhTpIkqYMM\ncZIkSR1kiJMkSeogQ5wkSVIHGeIkSZI6yBAnSZLUQYY4SZKkDjLESZIkdZAhTpIkqYMMcZIkSR1k\niJMkSeogQ5wkSVIHGeIkSZI6yBAnSZLUQYY4SZKkDjLESZIkddBIIS7Jw5IclOQDSVYluSfJuiRr\nkpyd5MD11D8iycVJ7k6ytt3GMUkm3X+S30jyxSR3JbkvybeTvCfJw8f4jpIkSQvOqCNxBwBfAt4G\n7Ah8BfgscBdwKHBBkj8ZVjHJqcCZwBLgYuA84InAKcDZEwW5JO8E/gV4HnAVcC6wHfA+4MIkW4zY\ndkmSpAVnkxHLPQB8Gji5qi7uX5Hkt2hC2nuTXFBVF/StOxQ4GrgN2L+qrmuXbw9cABwCvAk4eWCb\nS4DlwH3A86rq8nb5VjRhbn/g/cBbx/q288iuy84du87q5QfPQEskSVIXjTQSV1VfrqrDBgNcu+6T\nwIp29siB1e9qp8f1Alxb53bgqHZ22ZDRuGVAgBN6Aa6ttxZ4DU2oPDrJo0ZpvyRJ0kIzXTc2fL2d\n7tRbkGQnYB9gHfCpwQpVdRGwBtgB2K+v3qbAC9vZM4fUuxG4DNgUeNH0NF+SJKlbpivEPaGd3tq3\nbK92enVV3T9BvSsGygL8IrAFcFdV3TBGPUmSpEVjg0Nckh2Ape3sp/tW7dZOb5qk+s0DZft/vpmJ\nDasnSZK0aGxQiEuyCfAJ4JHA+VV1Tt/qrdrpvZNsYm07fcQ01Otv1+vbx5isuuOOOybZjCRJUjdt\n6EjcR4CDgFt46E0Nc6aqPlpVS6pqybbbbjvXzZEkSZp2Uw5xSU4GXkvz+JCDquq2gSK90bItJ9lM\nb9TtB9NQT5IkadGYUohL8gHgWOAOmgB33ZBiq9vpLpNsaueBsv0//8KY9SRJkhaNsUNckhNp3txw\nJ/D8qrpmgqK9x448JcnmE5TZd6AswLXA/cBjkuwxQb1nDqknSZK0aIwV4pIsB94BfA/49ar65kRl\nq+oWmtdlbQocPmRbB9A8V+42mue+9eqto3ndFsArh9TbHXg2zfPnxn/tgSRJ0gIwcohL8j7gOOD7\nNAFulFGw49vpCUn27NvWdsBp7ezyqnpgoN5yoIDjkjyzr95WwBltu0+rqu+P2n5JkqSFZKR3pyZ5\nKfCedvZ64E1JhhW9tqqW92aq6uwkp9O8YutbSb4E/JjmjtatgZXAKYMbqaorkiwDTgC+muTLNOHx\nAGA74PK+9kiSJC06I4U44DF9Py9pP8NcRDOK9jNVdXSSS4BjaELYxjTXvZ0BnD5kFK5X78Qk3wTe\nTnPt3GbAjcBfAidV1Y9GbLskSdKCM1KIq6oVPPiS+7FV1VnAWVOo9wXgC1PdryRJ0kI1Xe9OlSRJ\n0iwyxEmSJHWQIU6SJKmDDHGSJEkdZIiTJEnqIEOcJElSB436nDjNA7suG/8tY6uXHzwDLZEkSXPN\nkThJkqQOMsRJkiR1kCFOkiSpgwxxkiRJHWSIkyRJ6iBDnCRJUgcZ4iRJkjrIECdJktRBhjhJkqQO\nMsRJkiR1kCFOkiSpgwxxkiRJHWSIkyRJ6iBDnCRJUgcZ4iRJkjrIECdJktRBhjhJkqQOMsRJkiR1\nkCFOkiSpgwxxkiRJHWSIkyRJ6iBDnCRJUgcZ4iRJkjrIECdJktRBhjhJkqQO2mSuG6CZteuyc8eu\ns3r5wTPQEkmSNJ0ciZMkSeogQ5wkSVIHGeIkSZI6yBAnSZLUQYY4SZKkDjLESZIkdZAhTpIkqYMM\ncZIkSR1kiJMkSeog39ighxj3LQ++4UGSpNnnSJwkSVIHGeIkSZI6yBAnSZLUQYY4SZKkDjLESZIk\ndZAhTpIkqYN8xIjmxLiPMQEfZSJJUj9DnDbYVAKZJEnaMJ5OlSRJ6iBDnCRJUgcZ4iRJkjrIECdJ\nktRBhjhJkqQOMsRJkiR1kCFOkiSpgwxxkiRJHWSIkyRJ6iDf2KAFy1d7SZIWMkfiJEmSOsiROHWG\n72iVJOlBhjipj6dgJUldMe9PpyY5IsnFSe5OsjbJqiTHJJn3bZckSZop8zoIJTkVOBNYAlwMnAc8\nETgFONsgJ0mSFqt5ezo1yaHA0cBtwP5VdV27fHvgAuAQ4E3AyXPWSInxT8HO1unX+douSdL0mLch\nDnhXOz2uF+AAqur2JEcBFwLLkny4qh6YiwZKs8WbOiRJg+bl6cgkOwH7AOuATw2ur6qLgDXADsB+\ns9s6SZKkuTdfR+L2aqdXV9X9E5S5AtixLfvVWWmVNA3m66jabN2ZO19P887XdknSROZriNutnd40\nSZmbB8pKEmBQlrQ4zNcQt1U7vXeSMmvb6SNmuC2SJjAbYWkhBbLZ2M9sjI5OlYFU88lC+KNqvoa4\nDZLk9cDr29m1Sf7fLOx2G+C7s7CfxcxjPDs8zrNjRo5zTpjuLU6fOWibfXl2LJrjPEt9eJdRC87X\nENcbZdtykjK90bofDK6oqo8CH53uRk0myaqqWjKb+1xsPMazw+M8OzzOM89jPDs8znNnXt6dCqxu\np5Ol0Z0HykqSJC0a8zXEfb2dPiXJ5hOU2XegrCRJ0qIxL0NcVd0CXAVsChw+uD7JAcBONG9zuGx2\nWzehWT19u0h5jGeHx3l2eJxnnsd4dnic50iqaq7bMFSSw2ge9Hsb8GtVdX27fDua1249GXhLVfna\nLUmStOjM2xAHkOQ04Cjgh8CXgB8DBwFbAyuBw6rqp3PXQkmSpLkxr0McQJIjgGOApwEbA9cCZwCn\n+85USZK0WM3La+L6VdVZVfWcqtq6qrasqn2q6tT5EOCSHJHk4iR3J1mbZFWSY5LM++PaBUlWJKlJ\nPtfOdRu7IMkvJnlzkk8kuTbJA+3xO2yEuvbxEU3lONvHx5PkYUkOSvKBti/ek2RdkjVJzk5y4Hrq\n259HMNXjbH+effP1OXHzXpJTgaNpTvWez4Onek8BDkpy2HwImgvEpcD1Q5bfOtsN6aijgDePW8k+\nPrYpHeeWfXw0BwDntT/fBnyF5s0+TwYOBQ5N8qdV9YeDFe3PY5nycW7Zn2dLVfkZ80PTiYumQz6h\nb/n2wDXtujfPdTu7/gFWtMdy6Vy3pcsf4HXAicDLgT2AC9vjetgkdezjs3Oc7ePjHePnAWfT3Ow2\nuO63gJ+0x/O5A+vsz7NznO3Ps/xxCHlq3tVOj6uq63oLq+p2mr/GAZY5RK/5oKo+VlXvrKp/rKob\nRqxmHx/TFI+zxlBVX66qw6rq4iHrPkkTIgCOHFhtfx7DBhxnzTI77JiS7ATsA6yjeQTKz6mqi4A1\nwA7AfrPbOmnD2cfVYb2Hv+/UW2B/nhEPOc6aG14TN7692unVVXX/BGWuAHZsy351Vlq1sD03ydNp\n3pd7O3AJcF55/cpMsY/PPvv49HhCO+2/9sr+PP2GHed+9udZYogb327t9KZJytw8UFYb5lVDll2T\n5BVV9a1Zb83CZx+fffbxDZRkB2BpO/vpvlX252k0yXHuZ3+eJZ5OHd9W7fTeScqsbaePmOG2LHT/\nBhxLc0fUVsDjgRcD32iXfSnJjnPXvAXLPj577OPTIMkmwCeARwLnV9U5favtz9NkPccZ7M+zzpE4\nzVtV9RcDi+4Fzk1yHnARzfUr7wLeONttk6aDfXzafITmcSG34MX2M2nS42x/nn2OxI2v9xfblpOU\n6f3l94MZbsuiVFXrgOPb2RfNZVsWKPv4HLOPjy7JycBraZ5ndlBV3TZQxP48DUY4zhOyP88cQ9z4\nVrfTXSYps/NAWU2/3pO/HZqffqvbqX18btnH1yPJB2hO391BEyyuG1JsdTu1P0/RiMd5fezPM8AQ\nN77erdVPSbL5BGX2HSir6ffYdrp20lKaCvv4/GAfn0SSE4G3AXcCz6+qayYoan/eAGMc5/WxP88A\nQ9yYquoW4CpgU+DwwfVJDqB5ds5twGWz27pF5eXt9Io5bcUCZB+fN+zjE0iyHHgH8D3g16vqmxOV\ntT9P3TjHeQT25xlgiJua3rn9E5Ls2VuYZDvgtHZ2uc/Embokz0jy4iQbDyzfJMnbaYb2AT40+61b\nFOzjM8w+PjVJ3gccB3yfJliMMnpmfx7TuMfZ/jw3Us37zjSmJKfRvK7lh8CXePBlylsDK2nel/jT\nuWthtyV5GfBZ4C6av6L/m2Y4/mk0t60/ACyrqj+fs0Z2RJK9efAXFTS3+j8CuI7m+AJQVfsN1LOP\nj2Hc42wfH1+SlwKfa2dXAVdPUPTaqlo+UNf+PKKpHGf789wwxG2AJEcAx9B00o1pLtw8Azjdv+g2\nTJLdgDcDz6S5IPmxNC9W/k/gYuDUqrpy7lrYHUkOBC5YX7mqypC69vERjXuc7ePjS7IU+JsRil5U\nVQcOqW9/HsFUjrP9eW4Y4iRJkjrIa+IkSZI6yBAnSZLUQYY4SZKkDjLESZIkdZAhTpIkqYMMcZIk\nSR1kiJMkSeogQ5w0TyVZnaT6Pg8k+UGSW5J8KcnxSZ4+1+3U/JVkadt3Vgws37VdvnoW23Jhu88D\nZ2uf0kJniJPmv/8LfBz4W+BfgOuBJcAy4BtJ/inJDnPYPs2RXsCfB+0YGhYlzaxN5roBktZreVVd\n2L8gyUbAS4APttOLkvxKVd05B+3T/PVZ4GvA3XPdEOBVwBbAzXPdEGmhcCRO6qCqeqCqPkczInc9\n8ETgA3PbKs03VXV3VV1bVbfOg7bc3Lblvrlui7RQGOKkDquq7wFvaWePHDytmuT5SU5N8o0kdyb5\nUZKbknw8yS8Nbi/J+e1psVdMtM8kH2jLnNi3bLMky5JclWRtu59bk1yW5H1JNhvneyV5SpK/ba//\n+1GS7yb5fJIXTlB+RdumpUn2THJWktvbutcmOa4dvRx1/19rt/ebk5Q5qS1z0pB1L2hPc9+eZF17\nLP4+ydOGlP3Z9WlpHJ3k35Lcl+R7ST6X5KkDdf6o/zTqwLWT/cvHPs2Z5FlJ/jzJqr72/1eSs5Ps\nN6T8ah58WfqrB9qyoq/chNfEJXlYkjcmuTzJPUnuT/LvSZYneex0HDNpITLESd33eeAuYGPguQPr\nPgK8FvgJ8JW27DqaU1urkvzqQPkPt9Ojh+0oyebAa4AHgNPbZRsB5wLHA7sDFwGfBq4BdgbeAzxq\n1C+T5KXAlcDv0JwG7G3rBcDnk/zpJNWf0dZ9FnABcCmwB7AcOHnUNgAr2unSCdq4MfDKgbK9dScD\nXwBeCNwArARuBV4B/GuSF61nvx8E/pvmmN4NvBS4NMnufeX+jeY6yZ6PD3w2xPuBtwIPA/4V+Cfg\nTuBQ4JIkhw+UP5vmOEPzffvbccn6dtYG/C/S9L2n0vTTc2j6zHHAlQPffdAKRjtm0sJTVX78+JmH\nH2A1UMCBI5Q9ry37voHlLwMeNbAswBva8tcA6Vu3cd9+nzpkP7/brvvnvmX7t8uuBLYcsq/nAFuM\n+J13oPklXMDbBtYdCNzbrnvBwLoV7fIC/gjYaKB9P20/O4/YjkcB99ME3m2GrH9Ru69VA8t/v13+\nbeBJQ/4tfgx8D3h03/Jd+9p+I7BH37qH0wSTAv56SDuq+d/4hN9jaVtmxcDy3j5XD6nzG8D2Q5a/\npD0edw7+e060n4EyFw7rz8CJ7fJ/B3bsW745TUAs4LIJ2j/2MfPjZyF9HImTFobvttOfO/VUVSur\n6vsDy6qq/gr4KvBLwJP71v0UOK2dHTYa11t2Wt+y7dvpxVV175B9XVqjXwf1e8DWwKVV9cGBbV3I\ngyOFfzBB/SuAP66qB/rqfYXmDt+NeOhI5VDtMVtJMxp1xJAiS9vpit6CdnTuD9vZl1fVtQPbXAn8\nFU1APHKCXR9bVTf01fkR8Mft7EGjtH1DVdUXqur2IcvPAT4FPIYRj+P6tCO7R7Wzx1bVmr793U8T\nitcC+yV5zgSbmfNjJs0VQ5y0MPT+W35gcEWSnZK8IcmHkvyf9vqxFTSjXtDcFNHvYzSjUEcmeUTf\ndp4F7EMz8vGFvvJX0Yxyvba9Nml7pu6AdjrRKcEz2umvtqFp0OeratgjN3qB6vFjtGVFO13avzDJ\no2lO160Dzupb9QzgccDVVXXNBNu8qJ0+e8i6n/Dzx7VnKm3fIEm2aa+nOynJx/r6TO86s8E+M1X7\nAFsB/1VV5w2urKrv0pxahWYkdtC8OWbSXPARI9LCsE07vat/YZI/Bt7N5P+tb90/U1V3JTkTeB3N\ndWmDI3OnD4x03ZDkrcBJwKnAqUlupBnp+xzw2XaEbxQ7ttPvTLB+NU1Q3Yxm1PG/B9ZP9PiKe9rp\nODdYnAf8J7BXkqdV1bfa5b9Fc8ru01XVf7x71189Jet/dtu2Q5bdWlU/GVxYVfckod3njEvyBppr\nzLaYpNjWk6wbx/r+vaH5o6G/bL95ccykueJInNRxaX5b7dXOfqtv+aE0p/fupzlNuQfNtUypqgB/\n3ys6ZLO905ZHtdt6LPBy4Ic8OBr2M1X1YWCXtvyZNNfWHUlz+m1VknF/6U/1AbYPGYmcqjao/l07\nu7Rv1avb6YqBKr2RwTU89EaDwc/5Q3Y5bW2fqiT70tyw8jDgHcCTaEbKNmr7zPG9otO86zn/95a6\nyJE4qfsOBh5Nc9H8hX3Le3cRvruqPjak3p4TbbCqvpnkK8D+SfYH9qMZxVoxMPrUX+c2mrthPwKQ\n5JdpQtAzaN4u8e4RvssamuCwO8ODzq40f3z+kIFRxxmyAngX8Mokx9EE4f2A23joabxb2umtVbV0\nFto2Ew6lCWh/WVUPeXQKk/SZKepdA7fbJGV6I5xrJikjLUqOxEkd1l6f9aF29m+rqv/04mPa6S0M\nSPOMuL0Glw/ojca9keYCc2hOl46kqr7Bg4/1+OURq/WuGXvVBOtf004vGXYabbpV1X/QnBbenuau\nzd4o3JlD9v+vNHdu7pVkusPORH4MkGS6/iCfrM9sC/z6BPXWtdNx23ElzY0LOyZ5yE0I7QjwS9rZ\nC8fctrTgGeKkDkqyUfs8tStoRkeupTn91a93cffvJdm0r+52NKf01vcLdyXNL/PDaUZKrqiqVUPa\n8rwkLxpX6hQyAAAC0ElEQVQMEu2NB71not000heDvwZ+QHPjwrED29sfeFM7O5tvp1jRTn+X5hrB\n/mU/U1U/Bv6U5rTqyiTPHCyTZNMkL03ypGlqW2906iEPbp6iXp95VZKtegvbG1zOYOLn/U2pHe0d\nqB9pZ09O8ri+fW5Gc2p3K+BrVXXpkE1Ii5qnU6X5b1mSpe3Pm9FcFL83D/5CXQm8oZq3N/T7C5oR\nrYOB65NcTvPsrQNowtlKmmeXDVVVP0lyOvBn7aKJRuGeTjMaeHeSq2gebLsFzQN3H0dz6vGEUb5o\nVd2W5HeAT9L8Un8dzTPXHg/8Gs0fnu+rqmF3JM6UT9KMKB7Szl9ZVd8eVrCqTk6yC83Dci9P8k2a\nB+Cuo7kwfy9gS5oHAV87bBtj+my7r/OTfJlmVIuqet0Ut/c3NG8A2Ru4McklNKdX96f5DmfQhNlB\nX6P5d947ySrgappRwkur6m+GlO/3XprXxx0IXNd+j/tp/r0fR3OzyisnrC0tYo7ESfPfC2hO4/UC\n2RNpTkMdDzytqg4ZOI0KQFXdSBMa/oHmF/FLaEZKPkrziItRXoree+zDnTRhZphzaJ7LdRXNqOCh\nNL+AbwP+N/D0qhp1JI568J2wn6C5A/Uw4Gk0T/U/uKreO+q2pkNV3QN8pm/RivWUfxtNUP4HmmsV\nD6Y5FbsN8M80geTiaWree2juJF0L/E+at3O8dqoba/8QWELTR9bStH0JzfffmyGnWdt6P6L5jufS\njNoe2bbjgGHlB+r+EPgfwLE0D59+LvCbNHcUnwjs3fZlSQMy/JFKkgRJPkQzMnNiVR031+2RJD3I\nECdpqCQ707wK6WHAnlU1dBRGkjQ3vCZO0s9JshzYieZOxC2BPzfASdL840icpJ+TZDXwCzQ3KPwd\n8N72zktJ0jxiiJMkSeog706VJEnqIEOcJElSBxniJEmSOsgQJ0mS1EGGOEmSpA76/9MfAAe0smBc\nAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x114b1a7f0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.rcParams.update({'font.size': 22})\n",
+    "ax = plt.hist(data.duration_minutes.values/60/24, bins=40)\n",
+    "plt.xlabel('Days on ventilation', fontsize=22)"
    ]
   },
   {
